# senior_ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: adk-mcp-engineer.md  code-reviewer.md  devops-engineer.md  fastapi-engineer.md  qa-engineer.md  security-engineer.md  software-architect.md  transpiler-engineer.md
ai-context/: GUIDELINES.md  LINKS.md  README.md  STATUS.md  WORKFLOW.md
ai-context/references/: ADK.md  AGENTIC_PATTERNS.md  DESIGN_AUDIT.md  ENV_SETUP.md  FASTAPI.md  MCP_SSE.md  PII.md  TRANSPILER.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DESAFIO.md  README.md  REFERENCES.md  REQUIREMENTS.md  WALKTHROUGH.md
docs/EVIDENCE/: 0001-agentspec-schema.md  0002-transpiler-mvp.md  0003-mcp-ocr-rag.md  0004-scheduling-api.md  0005-pii-guard.md  0006-generated-agent.md  0007-docker-compose.md  0008-e2e-evidence-transparency.md  0009-output-hardening.md  0010-pre-ocr-invocation.md  0011-real-ocr-tesseract.md
docs/adr/: 0001-mcp-transport-sse.md  0002-transpiler-jinja-ast.md  0003-pii-double-layer.md  0004-sdd-tdd-workflow.md  0005-dev-stack.md  0006-spec-schema-and-agent-topology.md  0007-rag-fuzzy-and-catalog.md  0008-robust-validation-policy.md  0009-runtime-config-via-env.md  0010-preocr-invocation-pattern.md  0011-real-ocr-via-tesseract.md  README.md
docs/fixtures/: spec.example.json
docs/runbooks/: e2e-manual-gemini.md
docs/specs/: README.md
docs/specs/0001-agentspec-schema/: plan.md  spec.md  tasks.md
docs/specs/0002-transpiler-mvp/: plan.md  spec.md  tasks.md
docs/specs/0003-mcp-ocr-rag/: plan.md  spec.md  tasks.md
docs/specs/0004-scheduling-api/: plan.md  spec.md  tasks.md
docs/specs/0005-pii-guard/: plan.md  spec.md  tasks.md
docs/specs/0006-generated-agent/: plan.md  spec.md  tasks.md
docs/specs/0007-docker-compose/: plan.md  spec.md  tasks.md
docs/specs/0008-e2e-evidence-transparency/: plan.md  spec.md  tasks.md
docs/specs/0009-output-hardening/: plan.md  spec.md  tasks.md
docs/specs/0010-pre-ocr-invocation/: plan.md  spec.md  tasks.md
docs/specs/0011-real-ocr-tesseract/: plan.md  spec.md  tasks.md
docs/tutorials/: 01-transpiler-cli.md  02-ocr-mcp.md  03-rag-mcp.md  04-scheduling-api.md  05-generated-agent.md  06-pii-guard.md  README.md
generated_agent/: .env.example  Dockerfile  __init__.py  __main__.py  agent.py  logging_.py  preocr.py  pyproject.toml  validator.py
ocr_mcp/: .gitignore  Dockerfile  pyproject.toml
ocr_mcp/ocr_mcp/: __init__.py  __main__.py  errors.py  fixtures.py  logging_.py  ocr.py  server.py
ocr_mcp/tests/: conftest.py  generate_fixture.py  test_fixtures.py  test_guards.py  test_healthcheck.py  test_logging.py  test_pii_guard.py  test_server_ocr_hash_log.py
ocr_mcp/tests/unit/: test_fixtures.py  test_ocr.py  test_server.py
rag_mcp/: .gitignore  Dockerfile  pyproject.toml
rag_mcp/rag_mcp/: __init__.py  __main__.py  catalog.py  errors.py  logging_.py  models.py  server.py
rag_mcp/rag_mcp/data/: README.md  exams.csv
rag_mcp/tests/: conftest.py  test_catalog.py  test_healthcheck.py  test_logging.py  test_server_startup.py
scheduling_api/: Dockerfile  pyproject.toml
scheduling_api/scheduling_api/: __init__.py  __main__.py  app.py  errors.py  logging_.py  models.py  repository.py
scheduling_api/scheduling_api/routes/: appointments.py  health.py
scripts/: audit_logs_pii.py
security/: pyproject.toml
security/security/: __init__.py  _normalize.py  callback.py  engine.py  errors.py  guard.py  models.py
security/security/recognizers/: __init__.py  br_cnpj.py  br_cpf.py  br_phone.py  br_rg.py
security/tests/: conftest.py  test_errors.py  test_guards.py  test_logging.py  test_models.py  test_pii_callback.py  test_pii_mask.py  test_recognizers_registry.py
security/tests/recognizers/: __init__.py  test_br_cnpj.py  test_br_cpf.py  test_br_phone.py  test_br_rg.py
tests/e2e/: conftest.py  test_ci_flow.py  test_error_shape.py  test_no_pii_in_logs.py
tests/generated_agent/: conftest.py  test_agent_topology.py  test_e2e_flow.py  test_final_table.py  test_fixtures.py  test_guards.py  test_integration.py  test_logging.py  test_main_preocr_wiring.py  test_parse_runner_output.py  test_pii_callback.py  test_preocr.py  test_retry.py  test_runner_result.py  test_spec_example.py  test_validator_pass.py
tests/infra/: conftest.py  test_adr_0009_surface.py  test_compose.py  test_dockerfiles.py  test_dockerignore.py  test_env_config.py  test_fixtures.py  test_mcp_transport_match.py  test_runtime_deps.py
tests/scheduling_api/: __init__.py  conftest.py  test_appointments.py  test_errors.py  test_guards.py  test_health.py  test_logging.py  test_openapi.py  test_swagger.py
transpiler/: pyproject.toml
transpiler/tests/: conftest.py  test_ast_validation.py  test_cli.py  test_errors.py  test_generator.py  test_schema.py  test_snapshots.py
transpiler/tests/test_snapshots/: test_example_snapshot.yml  test_no_pii_snapshot.yml
transpiler/transpiler/: __init__.py  __main__.py  cli.py  errors.py  generator.py  schema.py
transpiler/transpiler/templates/: Dockerfile.j2  __init__.py.j2  __main__.py.j2  agent.py.j2  logging_.py.j2  requirements.txt.j2
