[project]
name = "generated-agent"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    # ADK runtime — pinned to 1.x stable; ADR-0005 requires explicit pin + ADR for upgrades
    "google-adk>=1.0.0,<2",
    # MCP client (SSE transport — ADR-0001)
    "mcp[cli]>=1.0,<2",
    # Pydantic v2 for output validation and models
    "pydantic>=2.6,<3",
    # httpx for OpenAPI spec fetch (MAJOR-5)
    "httpx>=0.27,<1",
]

[tool.uv.sources]
security = { path = "../security", editable = true }
# transpiler source needed by dev group for snapshot/round-trip tests (MAJOR-8)
transpiler = { path = "../transpiler", editable = true }

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "mypy>=1.9",
    "ruff>=0.4",
    "security",
    # transpiler kept in dev only — used by snapshot/round-trip tests (MAJOR-8)
    "transpiler",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generated_agent"]

[tool.pytest.ini_options]
testpaths = ["../tests/generated_agent"]
addopts = "--tb=short"
markers = [
    "skip_integration: skip tests requiring docker compose stack",
]

[tool.mypy]
python_version = "3.12"
packages = ["generated_agent"]
[[tool.mypy.overrides]]
module = [
    "google.adk.*",
    "google.genai.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C901", "SIM", "RET", "N"]
ignore = ["S101"]
