[project]
name = "scheduling-api"
version = "0.1.0"
description = "FastAPI scheduling service for Desafio Técnico Sênior IA"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scheduling_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests/scheduling_api"]
addopts = "--cov=scheduling_api --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C901", "SIM", "RET", "N"]
