[project]
name = "security"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
    "spacy>=3.7,<4",
    "pycpfcnpj>=1.8,<1.9",
    "pydantic>=2.6,<3",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "mypy>=1.9",
    "ruff>=0.4",
    "types-setuptools>=69,<71",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["security"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --cov=security --cov-report=term-missing --cov-fail-under=80"
markers = [
    "requires_spacy: mark test as requiring a spaCy model (pt_core_news_lg or en_core_web_lg)",
]

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["security"]
# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
    "spacy.*",
    "pycpfcnpj.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C901", "SIM", "RET", "N"]
ignore = ["S101"]  # allow assert statements (DbC pattern)

[tool.coverage.run]
source = ["security"]

[tool.coverage.report]
fail_under = 80
