[project]
name = "transpiler"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.6,<3",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "mypy>=1.9",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transpiler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["transpiler"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C901", "SIM", "RET", "N"]
ignore = ["S101"]  # allow assert statements (DbC pattern)

[tool.coverage.run]
source = ["transpiler"]

[tool.coverage.report]
fail_under = 80
